# Lathe

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
demo/: PyLatheDB_DEMO.ipynb
src/: indexes_test.py  mapper.py
src/candidate_network/: __init__.py  candidate_network.py  candidate_network.tentativa_hashable.py  candidate_network_handler.py
src/database/: database_handler.py  database_iter.py
src/evaluation/: __init__.py  evaluation_handler.py  evaluation_item.py  evaluation_script.py
src/index/: DatabaseIter.py  __init__.py  babel_hash.py  database_iter.py  index_handler.py  redis_handler.py  schema_graph.py  schema_index.py  value_index.py  value_structure.py
src/k2db/: mapper.py
src/keyword_match/: keyword_match.py  keyword_match_handler.py
src/model/: config_model.json  config_specific.json  gt_model.json
src/pylathedb/: lathe.py
src/query_match/: query_match.old.py  query_match.py  query_match_handler.py
src/scripts/: convertion.py
src/tests/: 01_dump_index_test.py  02_load_index_test.py  03_candidate_network_test.py  03_keyword_match_test.py  04_query_match_test.py  05_1_relevant_qms.py  05_2_run_single_query.py  05_schema_graph.py  06_candidate_networks_per_qm_test.py  (+25 more)
tests/: 01_dump_index_test.py  02_load_index_test.py  03_golden_standards.py  04_single_query_keyword_search.py  05_1_run_one_queryset.py  05_run_qm_generation.py  05_run_querysets.py  06_cns_from_golden_qms.py  07_run_cn_generation.py  08_num_possible_cns.py  IEEEAccessPlots.md  IEEEAccessPlots.py  NewPlots.md  NewPlots.py  Untitled.md  Untitled.py  test.md  test.py
(+71 files in other folders)
