[metadata]
name = pylathedb
version = 1.0.2
author = Paulo Martins
author_email = paulo.martins@icomp.ufam.edu.br
description = Keyword Search over Relational Databases
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pr3martins/K2D
project_urls =
    Bug Tracker = https://github.com/pr3martins/K2D/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    nltk
    psutil
    psycopg2-binary
    matplotlib
    prettytable
    pandas
    graphviz

[options.packages.find]
where = src
